cupt (0.6.2~) UNRELEASED; urgency=low

  * Cupt:
    - System:
      - Worker:
        - Significant speed-up of run-time pre-dependency check.
        - Significant speed-up of processing the virtual action dependencies.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Tue, 25 Aug 2009 12:01:11 +0300

cupt (0.6.1) unstable; urgency=low

  * Cupt:
    - Cache:
      - ArchitecturedRelation:
        - 'stringify': the architectures separator is the space, not the
          comma.
    - System:
      - Worker:
        - Turned the run-time pre-dependency check into a warning. One cannot
          surely say whether it's an error or not. Thanks to James Vega.
          (Closes: #543365)
  * debian/control:
    - The package 'libcupt-perl' now depends on 'liblist-moreutils-perl'.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Mon, 24 Aug 2009 23:22:32 +0300

cupt (0.6.0) unstable; urgency=low

  * cupt:
    - New 'version' (aliases: '--version', '-v') subcommand.
    - New 'help' (aliases: '--help', '-h') subcommand. (Closes: #540790)
    - 'showsrc':
      - Don't assume any of hash sum of package to de defined, check it.
        Thanks to Cyril Brulebois. (Closes: #541470)
    - New 'why' subcommand.
    - 'show':
      - Fix typo in code determining which hash sums are present.
    - 'satisfy':
      - Implemented unsatisfying relation expressions (by appending the minus
        sign) too.
    - 'rdepends':
      - Pre-build reverse dependencies index at start. Reduces time of
        one-shot rdepends call by ~2 times and dramatically reduces overall
        time in case of recursive rdepends.
  * Cupt:
    - Cache:
      - Package:
        - Fixed another crash when merging two source versions with equal
          version strings. Thanks to Cyril Brulebois.
      - BinaryVersion:
        - Fixed reading 'Task' field.
        - Don't warn on non-existent 'Priority' field, policy does not
          mandate it.
      - SourceVersion, BinaryVersion: